# jiit-tt-parser

./: Lab Location 2024.xlsx  README.md  __init__.py  cache.py  data.py  pyproject.toml  test.py  test_prepare.py
jiit_tt_parser/parser/: __init__.py  parse_courses.py  parse_electives.py  parse_events.py  parse_faculty.py
jiit_tt_parser/utils/: __init__.py  cache.py  preprocessing.py  utils.py
parser/: __init__.py  parse_events.py  parse_faculty.py
utils/: __init__.py  cache.py  preprocessing.py  utils.py
