[tool.poetry]
name = "jiit-tt-parser"
version = "0.1.1"
description = "Parse JIIT Time Table Spreadsheets in Python"
authors = ["Harsh Sharma <harsh@codelif.in>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.1.5"
requests = "^2.32.3"
xls2xlsx = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
