[tool.poetry]
name = "jiit-tt-parser"
version = "0.2.2"
description = "Parse JIIT Time Table Spreadsheets in Python"
authors = ["Harsh Sharma <harsh@codelif.in>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "*"
requests = "*"
pandas = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
